# Google-Codejam

./: CMakeLists.txt  README.md
2017-kickstart-F/1/: A-large.out.txt  A-small-attempt0.in.txt  A-small-attempt0.out.txt  main.cpp
2017-kickstart-F/2/: B-large.out.txt  B-small-attempt0.in.txt  B-small-attempt0.out.txt  B-small-attempt1.in.txt  B-small-attempt1.out.txt  B-small-attempt2.in.txt  B-small-attempt2.out.txt  main.cpp  test.in.txt
2017-kickstart-F/3/: C-large.in.txt  C-large.out.txt  C-small-attempt0.in.txt  C-small-attempt0.out.txt  C-small-attempt1.in.txt  C-small-attempt1.out.txt  C-small-attempt2.in.txt  C-small-attempt2.out.txt  C-small-attempt2.out.txt-BAK  C-small-attempt2.out.txt-BAK3  C-small-attempt3.in.txt  C-small-attempt3.out.txt  main.cpp  test.out.txt
2017-kickstart-F/4/: D-large.out.txt  D-small-attempt0.in.txt  D-small-attempt0.out.txt  main.cpp
Qualification/bathroomStalls/: C-large.out.txt  C-small-2-attempt0.in.txt  C-small-2-attempt0.out.txt  a.out  main.cpp  test.out.txt
Qualification/fashionShow/: D-large.in.txt  D-large.out.txt  D-small-attempt0.in.txt  D-small-attempt0.out.txt  D-small-attempt0.out_wrong.txt  D-small-attempt1.out.txt  D-small-attempt1.out_wrong.txt  D-small-attempt2.out_correct.txt  test.out.txt
Qualification/pancake/: A-small-attempt0.out.txt  test.out.txt
Qualification/tidyNumber/: main.cpp  test.in.txt  test.out.txt
Round1A/1/: A-large.out.txt  A-small-attempt0.out.txt  A-small-attempt1.out.txt  A-small-attempt2.out.txt  a.out  main.cpp
Round1A/2/: main.cpp
Round1A/3/: main.cpp  (+1 more)
templates/: main.cpp
(+28 files in other folders)
