cmake_minimum_required(VERSION 3.7)
project(2017)

set(CMAKE_CXX_STANDARD 11)

#set(SOURCE_FILES 2017-kickstart-F/3/main.cpp)
#set(SOURCE_FILES templates/main.cpp)
add_executable(2017-kickstart-F-3 2017-kickstart-F/3/main.cpp)
add_executable(2017-kickstart-F-2 2017-kickstart-F/2/main.cpp)
add_executable(2017-kickstart-F-1 2017-kickstart-F/1/main.cpp)
add_executable(2017-kickstart-F-4 2017-kickstart-F/4/main.cpp)
